# stencil3d

./: CMakeLists.txt  Makefile  Makefile.host  README.md  aux.cpp  aux.h  config.h  gilbert2d.cpp  gilbert2d.h  grid.cpp  grid.h  iterators.cpp  iterators.h  main.cpp  new_runtime.conf  stencil_13.h  stencil_2.h  stencil_25.h  stencil_7.h  stencils.h
